--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,4 @@
-server:
-  port: 8080
-
 spring:
-  mvc:
-    view:
-      prefix: /WEB-INF/views/
-      suffix: .jsp
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/metadb
-    username: root
-    password: narf4661@@
-  jpa:
-    hibernate:
-      ddl-auto: create
-    show-sql: true
+  profiles:
+    active:
+      - prod
